@@ -158,6 +158,12 @@ function handle_messages.msg(header, player, message)
 	}
 end
 
+---Reprints the chat to clear ephemeral messages
+---@param player_index int
+function handle_messages.clear_ephemeral(player_index)
+  ChatHistoryManager.print_chat("player", player_index)
+end
+
 ---Wraps the given LocalisedString or string in a LocalisedString
 ---that colors the text. Mostly just a shorthand to avoid
 ---turning the color objects into the argument array all the time
