@@ -6,6 +6,7 @@ Date: ????
   Bugfixes:
     - /w and /s now actually work
     - Whispering now can't crash if there's no recipient passed
+    - Intentional ephemeral messages now actually replace system messages
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 2024-07-26
